--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -1,298 +1,10 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="schedule.css">
 <script src="script/jquery.min.js"></script>
 
-<head>
-    <style>
-        @font-face {
-            font-family: "Helvetica-Neue-Light";
-            src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
-        }
 
-        @font-face {
-            font-family: "Roboto-Thin";
-            src: url(fonts/Roboto-Thin.ttf);
-        }
-
-        @font-face {
-            font-family: "Roboto-Light";
-            src: url(fonts/Roboto-Light.ttf);
-        }
-
-        @keyframes bar-animation {
-            from {
-                width: 0px;
-            }
-
-            to {
-                width: 650px;
-            }
-        }
-
-        @keyframes animatebottom {
-            from {
-                bottom: -50px;
-                opacity: 0
-            }
-
-            to {
-                bottom: 0;
-                opacity: 1
-            }
-        }
-
-        @keyframes animatetop {
-            from {
-                bottom: 0px;
-                opacity: 1
-            }
-
-            to {
-                bottom: -50px;
-                opacity: 0
-            }
-        }
-
-        #time-stamp {
-            position: absolute;
-            color: white;
-            font-family: "Roboto-Thin";
-            font-size: 48px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -70%);
-        }
-
-        .under-line-box {
-            position: absolute;
-            top: 34px;
-        }
-
-        .center-top-box {
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, 0%);
-        }
-
-        .raon-box {
-            position: absolute;
-            left: 10px;
-            top: 20px;
-        }
-
-        .accelerator-control {
-            position: absolute;
-            color: white;
-            width: 150px;
-            left: 150px;
-            top: 40px;
-            font-family: "Helvetica-Neue-Light";
-        }
-
-        .body-left {
-            float: left;
-            width: 750px;
-            height: 1000px;
-            /* background-color: tomato; */
-        }
-
-        .body-center {
-            float: left;
-            width: 420px;
-            height: 1000px;
-            /* background-color: teal; */
-        }
-
-        .body-right {
-            float: left;
-            width: 750px;
-            height: 1000px;
-            /* background-color: goldenrod; */
-        }
-
-        .header-box {
-            display: inline-block;
-            font-size: 32px;
-            font-family: "Helvetica-Neue-Light";
-            color: white;
-            margin-top: 30px;
-            margin-bottom: 10px;
-        }
-
-        .header-bar {
-            display: inline-block;
-            height: 5px;
-            background-color: #283593;
-            animation-name: bar-animation;
-            animation-duration: 1s;
-            animation-fill-mode: forwards;
-        }
-
-        #calendar-header {
-            margin: auto;
-            background-color: #1d1d1d;
-            border-collapse: collapse;
-        }
-
-        #calendar-header td {
-            width: 105px;
-        }
-
-        #calendar {
-            background-color: #1d1d1d;
-        }
-
-        table {
-            border-collapse: collapse;
-            color: white;
-            font-family: "Helvetica-Neue-Light";
-            margin: auto;
-        }
-
-
-        th,
-        td {
-            /* border: 1px solid white; */
-
-        }
-
-        .year {
-            height: 80px;
-            text-align: center;
-            background-color: #181818;
-        }
-
-        .week {
-            height: 40px;
-            text-align: center;
-            font-size: 15px;
-            color: gray;
-            background-color: #181818;
-        }
-
-        button {
-            height: 26px;
-            width: 100%;
-            border: none;
-            border-radius: 13px;
-            color: white;
-            cursor: pointer;
-        }
-
-        .day-box {
-            width: 40px;
-            height: 40px;
-            margin: 5px;
-            text-align: center;
-            line-height: 40px;
-            border-radius: 20px;
-        }
-
-        .today-box {
-            width: 740px;
-            height: 150px;
-            font-size: 18px;
-            font-family: "Helvetica-Neue-Light";
-            color: white;
-            margin-top: auto;
-            background-color: #181818;
-            padding: 20px;
-            box-sizing: border-box;
-
-        }
-
-        .schedule-list-box {
-            width: 300px;
-            height: 150px;
-            padding: 10px;
-            border-radius: 20px;
-            color: white;
-            margin: auto;
-            font-family: "Roboto-Light";
-
-            position: relative;
-            animation: animatebottom 1s;
-            bottom: -50px;
-            opacity: 0;
-            animation-fill-mode: forwards;
-
-        }
-
-        .day-schedule {
-            font-size: 14px;
-            margin-left: 10px;
-            margin-top: 8px;
-        }
-
-        #shift-table {
-            position: relative;
-            margin-left: 70px;
-            /* animation: animatebottom 1s; */
-            /* animation-fill-mode: forwards; */
-            /* opacity: 0; */
-            /* border: 1px solid white; */
-        }
-
-        .shift-avatar {
-            width: 60px;
-            height: 60px;
-        }
-
-        /* .shift-avatar img {
-            width: 60px;
-            height: 60px;
-        } */
-
-        .shift-team {
-            width: 345px;
-            height: 20px;
-            /* text-align: left; */
-            padding-left: 10px;
-            font-size: 14px;
-            color: gray;
-        }
-
-        .shift-team svg {
-            vertical-align: middle;
-        }
-
-        .shift-user {
-            width: 345px;
-            height: 40px;
-            font-size: 28px;
-            padding-left: 10px;
-        }
-
-        .avatar-img {
-            /* border: 2px solid white; */
-            border-radius: 50%;
-        }
-
-        .row-spacing {
-            height: 20px;
-        }
-
-        .desk-img {
-            display: inline-block;
-            margin-left: 10px;
-        }
-
-        #schedule1 {
-            background-color: #283593;
-        }
-
-        #schedule2 {
-            background-color: #2E7D32;
-        }
-
-        #schedule3 {
-            background-color: #EF6C00;
-        }
-    </style>
-</head>
-
-<body style="background-color: black;">
-
+<body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
         <div class="under-line-box"><img src="images/under-line.svg"></img></div>
@@ -328,11 +40,12 @@
 
             <table id="calendar"></table>
 
-            <div class="header-box">Today</div>
+ <!--           <div class="header-box">Today</div>
             <div class="today-box">
                 The third effect depends not only on the top position of the window’s scrollbar, but also on the width
                 property of the window. More specifically, we are making the following assumptions
             </div>
+-->
         </div>
 
         <div class="body-center">
