--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -350,15 +350,6 @@
                 <div class="grid-item"
                     style="display:flex; width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                     <svg width="622" height="162" style="position: absolute; top:-1px; left:-1px;">
-                        <defs>
-                            <style>
-                                .boxEdgeStyle {
-                                    fill: none;
-                                    stroke: #ccc;
-                                    stroke-miterlimit: 10;
-                                }
-                            </style>
-                        </defs>
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
                         <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
@@ -476,6 +467,12 @@
                 </div>
 
                 <div class="grid-item" style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
+                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
+                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
+                        <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
+                        <polyline class="boxEdgeStyle" points="611.5 201.5 621.5 201.5 621.5 191.5" />
+                        <polyline class="boxEdgeStyle" points="0.5 191.5 0.5 201.5 10.5 201.5" />
+                    </svg>
                     <canvas id="canvas1" width="640px" height="200px"></canvas>
                 </div>
             </div>
@@ -595,6 +592,12 @@
                 </div>
 
                 <div class="grid-item" style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
+                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
+                        <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
+                        <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
+                        <polyline class="boxEdgeStyle" points="611.5 201.5 621.5 201.5 621.5 191.5" />
+                        <polyline class="boxEdgeStyle" points="0.5 191.5 0.5 201.5 10.5 201.5" />
+                    </svg>
                     <canvas id="canvas2" width="640px" height="200px"></canvas>
                 </div>
             </div>
