--- a/raon-control/test/liquidFillAnimation.html
+++ b/raon-control/test/liquidFillAnimation.html
@@ -1,6 +1,8 @@
 <!-- https://www.youtube.com/watch?v=wGPDuqgkoew&t=12s -->
 <!DOCTYPE html>
 <html>
+<script src="../script/jquery-3.5.1.min.js"></script>
+
     <style>
         body {
             margin: 0px;
@@ -41,7 +43,7 @@
             animation: fill 7s ease-out forwards, rotation 7s linear infinite;
         }
 
-        .box-2 {
+        .box2, .box3, .box4 {
             width: 100px;
             height: 100px;
             border: 1px solid #ccc;
@@ -50,11 +52,11 @@
             text-align: center;
             color: #ddd;
             position: relative;
-            overflow: hidden;
+            {% comment %} overflow: hidden; {% endcomment %}
             z-index: -1;
         }
 
-        .box-2::before {
+        .box2::before {
             content: "";
             position: absolute;
             width: 200px;
@@ -66,6 +68,27 @@
             animation: fill 7s ease-out forwards, rotation 7s linear infinite;
         }
 
+        .box3-1 {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            background: #00acee;
+            left: 50%;
+            transform: translateX(-30%);
+            border-radius: 40%;
+            animation: fill 7s ease-out forwards, rotation 7s linear infinite;
+        }
+
+        #box4-1 {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            top: 10px;
+            left: -50px;
+            transform: rotateZ(30deg);
+            background: #00acee;
+            border-radius: 40%;
+        }
 
         @keyframes fill {
             from {
@@ -90,7 +113,41 @@
             Fill Effect
         </div>
 
-        <div class="box-2">
+        <div class="box2">
         </div>
+ 
+        <div class="box3">
+        <div class="box3-1"></div>
+        </div>
+
+    <button type="button" class="play-animation">Play Animation</button>
+    <button type="button" class="stop-animation">Stop Animation</button>
+
+        <div class="box4">
+        <div id="box4-1"></div>
+        </div>
+
     </body>
+
+    <script>
+    $(document).ready(function(){
+        $(".play-animation").click(function(){
+            $(".box3-1").css("animation-play-state", "running");
+        });
+        $(".stop-animation").click(function(){
+            $(".box3-1").css("animation-play-state", "paused");
+        });
+    });
+
+    var dom = document.getElementById('box4-1');
+    function start() {
+
+    }
+
+    function stop() {
+
+    }
+
+</script>
+
 </html>
