--- a/raon-control/test/liquidFillAnimation.html
+++ b/raon-control/test/liquidFillAnimation.html
@@ -3,151 +3,185 @@
 <html>
 <script src="../script/jquery-3.5.1.min.js"></script>
 
-    <style>
-        body {
-            margin: 0px;
-            height:100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: "Open Sans", sans-serif;
-            background: #222;
+<style>
+    body {
+        margin: 0px;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Open Sans", sans-serif;
+        background: #222;
 
+    }
+
+    .box {
+        width: 200px;
+        height: 200px;
+        border: 10px solid #ccc;
+        border-radius: 50%;
+        line-height: 200px;
+        text-align: center;
+        color: #ddd;
+        font-size: 25px;
+        font-weight: 600;
+        text-transform: uppercase;
+        position: relative;
+        overflow: hidden;
+        z-index: -1;
+    }
+
+    .box::before {
+        content: "";
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        background: #00acee;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 40%;
+        animation: fill 7s ease-out forwards, rotation 7s linear infinite;
+    }
+
+    .box2,
+    .box3,
+    .box4 {
+        width: 100px;
+        height: 100px;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        line-height: 200px;
+        text-align: center;
+        color: #ddd;
+        position: relative;
+        overflow: hidden;
+        z-index: -1;
+    }
+
+    .box2::before {
+        content: "";
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background: #00acee;
+        left: 50%;
+        transform: translateX(-30%);
+        border-radius: 40%;
+        animation: fill 7s ease-out forwards, rotation 7s linear infinite;
+    }
+
+    .box3-1 {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background: #00acee;
+        left: 50%;
+        transform: translateX(-30%);
+        border-radius: 40%;
+        /* animation: fill 7s ease-out forwards, rotation 7s linear infinite; */
+    }
+
+    #box4-1 {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        top: 100px;
+        left: -50px;
+        /* transform: translateY(0px); */
+        background: #00acee;
+        border-radius: 40%;
+    }
+
+    @keyframes fill {
+        from {
+            top: 110px;
         }
 
-        .box {
-            width: 200px;
-            height: 200px;
-            border: 10px solid #ccc;
-            border-radius: 50%;
-            line-height: 200px;
-            text-align: center;
-            color: #ddd;
-            font-size: 25px;
-            font-weight: 600;
-            text-transform: uppercase;
-            position: relative;
-            overflow: hidden;
-            z-index: -1;
+        to {
+            top: 50px;
+        }
+    }
+
+    @keyframes rotation {
+        from {
+            transform: translateX(-50%) rotate(0deg);
         }
 
-        .box::before {
-            content: "";
-            position: absolute;
-            width: 400px;
-            height: 400px;
-            background: #00acee;
-            left: 50%;
-            transform: translateX(-50%);
-            border-radius: 40%;
-            animation: fill 7s ease-out forwards, rotation 7s linear infinite;
+        to {
+            transform: translateX(-50%) rotate(360deg);
         }
+    }
+</style>
 
-        .box2, .box3, .box4 {
-            width: 100px;
-            height: 100px;
-            border: 1px solid #ccc;
-            border-radius: 50%;
-            line-height: 200px;
-            text-align: center;
-            color: #ddd;
-            position: relative;
-            {% comment %} overflow: hidden; {% endcomment %}
-            z-index: -1;
-        }
+<body>
+    <div class="box">
+        Fill Effect
+    </div>
 
-        .box2::before {
-            content: "";
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            background: #00acee;
-            left: 50%;
-            transform: translateX(-30%);
-            border-radius: 40%;
-            animation: fill 7s ease-out forwards, rotation 7s linear infinite;
-        }
+    <div class="box2">
+    </div>
 
-        .box3-1 {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            background: #00acee;
-            left: 50%;
-            transform: translateX(-30%);
-            border-radius: 40%;
-            animation: fill 7s ease-out forwards, rotation 7s linear infinite;
-        }
-
-        #box4-1 {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            top: 10px;
-            left: -50px;
-            transform: rotateZ(30deg);
-            background: #00acee;
-            border-radius: 40%;
-        }
-
-        @keyframes fill {
-            from {
-                top: 110px;
-            }
-            to {
-                top: 50px;
-            }
-        }
-
-        @keyframes rotation {
-            from {
-                transform: translateX(-50%) rotate(0deg);
-            }
-            to {
-                transform: translateX(-50%) rotate(360deg);
-            }
-        }
-    </style>
-    <body>
-        <div class="box">
-            Fill Effect
-        </div>
-
-        <div class="box2">
-        </div>
- 
-        <div class="box3">
+    <div class="box3">
         <div class="box3-1"></div>
-        </div>
+    </div>
 
     <button type="button" class="play-animation">Play Animation</button>
     <button type="button" class="stop-animation">Stop Animation</button>
 
-        <div class="box4">
+    <div class="box4">
         <div id="box4-1"></div>
-        </div>
+    </div>
 
-    </body>
+    <button type="button" onclick="start()">Play Animation</button>
+    <button type="button" onclick="stop()">Stop Animation</button>
 
-    <script>
-    $(document).ready(function(){
-        $(".play-animation").click(function(){
+</body>
+
+<script>
+    $(document).ready(function () {
+        $(".play-animation").click(function () {
             $(".box3-1").css("animation-play-state", "running");
         });
-        $(".stop-animation").click(function(){
+        $(".stop-animation").click(function () {
             $(".box3-1").css("animation-play-state", "paused");
         });
     });
 
     var dom = document.getElementById('box4-1');
+    var moveID = null;
     function start() {
+        setInterval(rotation, 10);
+        moveID = setInterval(move, 10);
+    }
 
+    var degree = 0;
+    var subBox = document.getElementById('box4-1');
+
+    function rotation() {
+
+        subBox.style.transform = 'rotate(' + degree + 'deg)';
+        degree += 0.5;
+    }
+
+    var direction = 1;
+    var dd = 100;
+    function move() {
+
+        subBox.style.top = dd + 'px';
+        
+        if( dd >= 100) direction = -1;
+        else if (dd < 50) direction = 1;
+
+        dd += direction * 0.1;
     }
 
     function stop() {
-
+        clearInterval(moveID);
     }
 
+    window.onload = function () {
+        // start();
+    }
 </script>
 
 </html>
