--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -1687,6 +1687,7 @@
                     moduleChange(moduleType);
 
                     let timeout = 0;
+                    // Module shadow show up time change 
                     if (currentModule != moduleType) {
                         timeout = 500;
                         currentModule = moduleType
